@@ -67,6 +67,9 @@
 		/** LED mask for the library LED driver, to indicate that an error has occurred in the USB interface. */
 		#define LEDMASK_USB_ERROR        (LEDS_LED1 | LEDS_LED3)
 
+		/** LED mask for the library LED driver, to indicate that the USB interface is busy. */
+		#define LEDMASK_BUSY             (LEDS_LED1 | LEDS_LED2)
+
 	/* Function Prototypes: */
 		void SetupHardware(void);
 
